--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Random Animal Photos 🐾</title>
+
   <link rel="icon" href="8817973.png">
   <link rel="stylesheet" href="style.css">
+
+  <!-- IMPORTANT: defer makes it work on GitHub Pages -->
+  <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -21,7 +25,8 @@
 
     <div id="totalLikes">Total Paw Power: 0 🐾</div>
     <div id="animalType">Loading...</div>
-    <img id="animalImage" src="" alt="Random Animal">
+
+    <img id="animalImage" alt="Random Animal" />
   </div>
 
   <div class="buttons">
@@ -31,11 +36,9 @@
   </div>
 
   <div id="lightboxOverlay">
-    <img src="" alt="Animal Fullscreen">
+    <img alt="Animal Fullscreen">
   </div>
 
-  <img id="surprisePopup" src="" alt="Surprise!">
-
-  <script src="script.js"></script>
 </body>
 </html>
+
