Refactor comments in index.html for clarity
Updated comments for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <link rel="icon" href="8817973.png">
   <link rel="stylesheet" href="style.css">
 
-  <!-- Use defer to ensure script loads after the DOM -->
+  <!-- defer ensures script runs after DOM is ready -->
   <script src="script.js" defer></script>
 </head>
 <body>
 
   <div id="container">
     <h1>Random Animal Photos 🐾</h1>
+
     <div class="filter-buttons">
       <button id="showDog">Dog</button>
       <button id="showCat">Cat</button>
