Add footer to index.html with copyright details
Added footer with copyright information and email.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
   <img id="surprisePopup" src="" alt="Surprise!">
 
+  <footer id="footer">
+  &copy; 2026 Ba Duy Tran. All rights reserved. Images are provided by public APIs. My emails baduyyy.aquatique@gmail.com
+</footer>
+
   <script src="script.js"></script>
 </body>
 </html>
+
