Integrate Google AdSense script into index.html
Added Google AdSense script for monetization.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Random Animal Photos 🐾</title>
   <link rel="icon" href="8817973.png">
   <link rel="stylesheet" href="style.css">
+
+    <!-- Google AdSense script -->
+  <script data-ad-client="ca-pub-XXXXXXXXXXXXXXX" async
+          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  
 </head>
 <body>
 
@@ -43,4 +48,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
