--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="style.css">
 
     <!-- Google AdSense script -->
-  <script data-ad-client="ca-pub-XXXXXXXXXXXXXXX" async
-          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7925733222541746"
+     crossorigin="anonymous"></script>
   
 </head>
 <body>
@@ -48,5 +48,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
