--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Google AdSense script -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7925733222541746"
      crossorigin="anonymous"></script>
+  <meta name="google-adsense-account" content="ca-pub-7925733222541746">
   
 </head>
 <body>
@@ -48,6 +49,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
