--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="google-adsense-account" content="ca-pub-7925733222541746">
+  <meta name="google-site-verification" content="ca-pub-7925733222541746">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Random Animal Photos 🐾</title>
@@ -49,6 +49,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
