Enhance index.html with SEO and structured data
Updated the HTML structure with SEO metadata, improved title and description, and added JSON-LD structured data for Google.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="google-site-verification" content="ca-pub-7925733222541746">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Random Animal Photos 🐾</title>
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="ca-pub-7925733222541746">
+
+  <!-- SEO Metadata -->
+  <title>Random Animal Photos — Free Pictures of Dogs, Cats & More 🐾</title>
+  <meta name="description" content="Discover endless random animal photos. Free, fun, and perfect for social media or wallpapers.">
+
+  <!-- Favicon -->
   <link rel="icon" href="8817973.png">
+
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css">
 
-    <!-- Google AdSense script -->
+  <!-- Google AdSense script -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7925733222541746"
      crossorigin="anonymous"></script>
-  
+
+  <!-- JSON-LD Structured Data for Google -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ImageGallery",
+    "name": "Random Animal Photos",
+    "description": "Free random pictures of dogs, cats, and other animals. Perfect for social media, wallpapers, or fun.",
+    "url": "https://www.randomanimalphotos.com/",
+    "image": [
+      "https://www.randomanimalphotos.com/sample1.jpg",
+      "https://www.randomanimalphotos.com/sample2.jpg",
+      "https://www.randomanimalphotos.com/sample3.jpg"
+    ],
+    "publisher": {
+      "@type": "Person",
+      "name": "Ba Duy Tran",
+      "email": "baduyyy.aquatique@gmail.com"
+    }
+  }
+  </script>
 </head>
+
 <body>
 
   <div id="container">
@@ -49,6 +79,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
