--- a/index.html
+++ b/index.html
@@ -49,40 +49,36 @@
     <h1>Random Animal Photos 🐾</h1>
 
     <div class="filter-buttons">
-      <button id="showDog">Dog</button>
-      <button id="showCat">Cat</button>
-      <button id="showRandom">Surprise Me!</button>
-      <button id="darkModeBtn">🌙 Dark Mode</button>
+      <button id="showDog" aria-label="Show Dog photos">Dog</button>
+      <button id="showCat" aria-label="Show Cat photos">Cat</button>
+      <button id="showRandom" aria-label="Surprise me with a random animal">Surprise Me!</button>
+      <button id="darkModeBtn" aria-label="Toggle dark mode">🌙 Dark Mode</button>
     </div>
 
     <div id="totalLikes">Total Paw Power: 0 🐾</div>
     <div id="animalType">Loading...</div>
-    <img id="animalImage" src="" alt="Random Animal">
+    <img id="animalImage" src="" alt="Random Animal" loading="lazy">
   </div>
 
   <div class="buttons">
-    <button id="prevPhoto" disabled>Previous</button>
-    <button id="nextPhoto">Next</button>
-    <button id="likePhoto">❤️ Like (<span id="likeCount">0</span>)</button>
+    <button id="prevPhoto" disabled aria-label="Previous photo">Previous</button>
+    <button id="nextPhoto" aria-label="Next photo">Next</button>
+    <button id="likePhoto" aria-label="Like this photo">❤️ Like (<span id="likeCount">0</span>)</button>
   </div>
 
+  <!-- Lightbox fullscreen -->
   <div id="lightboxOverlay">
     <img src="" alt="Animal Fullscreen">
   </div>
 
-  <img id="surprisePopup" src="" alt="Surprise!">
+  <!-- Surprise images -->
+  <img id="surprisePopup" src="" alt="Surprise!" style="display:none;">
+  <img id="surpriseShadow" src="" alt="Surprise background" style="display:none;">
 
   <footer id="footer">
-  &copy; 2026 Ba Duy Tran. All rights reserved. Images are provided by public APIs. My emails baduyyy.aquatique@gmail.com
-</footer>
+    &copy; 2026 Ba Duy Tran. All rights reserved. Images are provided by public APIs. Email: baduyyy.aquatique@gmail.com
+  </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
